--- a/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
+++ b/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
@@ -1,4 +1,13 @@
 .sse-page {
+    .video-container {
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+    }
+    .video {
+        width: 100%;
+    }
     .top-letter {
         font-size: 48px;
         color: green;
