--- a/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
+++ b/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
@@ -63,9 +63,14 @@
 .assistant-frame {
     width: 100%;
     height: 100%;
-    top: 0;
+    top: 10%;
     bottom: 0;
-    left: 0;
-    right: 0;
+    left: 20%;
+    right: 0%;
+    -ms-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
     position: absolute;
 }
