--- a/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
+++ b/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
@@ -1,16 +1,18 @@
 .sse-page {
     display: flex;
     flex-direction: row;
-
+    height: 100%;
     .video-container {
-        margin: 40px;
+        flex: 1;
         border-style: solid;
-        border-width: 6px;
+        border-width: 0px;
         justify-content: center;
         align-items: center;
     }
     .video {
         width: 100%;
+        object-fit: cover;
+        height: 100%;
     }
     .top-letter {
         font-size: 48px;
@@ -28,7 +30,6 @@
         opacity: 1;
         animation: blink 1s infinite;
     }
-
     @keyframes blink {
         0% {
             opacity: 100%;
@@ -42,24 +43,34 @@
     }
 }
 
-.header{
+.header {
     margin-top: "50px";
     padding-bottom: "50px";
     text-align: center;
     font-size: 36pt;
 }
 
-.text_container{    
+.text_container {
+    flex: 1;
     margin: 40px;
     display: flex;
-    flex-direction: row;
-    width: 50%;
+    flex-direction: column;
+    .logo {
+        flex: 1;
+    }
+    .input-response {
+        flex: 15;
+        display: flex;
+        .response-child {
+            align-self: end;
+        }
+    }
 }
 
-.spinner{
+.spinner {
     width: 100px;
-
 }
+
 .assistant-frame {
     width: 100%;
     height: 100%;
