--- a/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
+++ b/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
@@ -52,13 +52,13 @@
 
 .text_container {
     flex: 1;
-    margin: 40px;
     display: flex;
     flex-direction: column;
     .logo {
         flex: 1;
     }
     .input-response {
+        padding: 40px;
         flex: 15;
         display: flex;
         .response-child {
@@ -74,10 +74,7 @@
 .assistant-frame {
     width: 100%;
     height: 100%;
-    top: 10%;
     bottom: 0;
-    left: 20%;
-    right: 0%;
     -ms-transform: scale(0.5);
     -moz-transform: scale(0.5);
     -o-transform: scale(0.5);
