--- a/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
+++ b/frontend/my-app/src/containers/sseRecieverPage/ssePage.scss
@@ -16,11 +16,11 @@
     }
     .top-letter {
         font-size: 48px;
-        color: green;
+        color: rgb(25, 208, 25);
     }
     .letter-one {
         font-size: 36px;
-        color: green;
+        color: rgb(25, 208, 25);
     }
     .letter-two {
         font-size: 36px;
@@ -51,6 +51,7 @@
 }
 
 .text_container {
+    color: #d7b87b;
     flex: 1;
     display: flex;
     flex-direction: column;
